ark/docs/src/styles.css
@import url("https://fonts.googleapis.com/css?family=Raleway:300,400,500,700&display=swap");
@import url("https://fonts.cdnfonts.com/css/cascadia-code");

:root {
	--sl-font: Raleway, sans-serif;
	--sl-font-mono: cascadia code;
}

/* Dark mode colors. */
:root {
	--sl-color-accent-low: #4b3621;
	--sl-color-accent: #eb9f2e;
	--sl-color-accent-high: #f5cf8f;
	--sl-color-white: #fffff0;
	--sl-color-gray-1: #e0f0ff;
	--sl-color-gray-2: #a4c6e5;
	--sl-color-gray-3: #4b91cc;
	--sl-color-gray-4: #0a5c93;
	--sl-color-gray-5: #003b62;
	--sl-color-gray-6: #002946;
	--sl-color-black: #001a2f;
}
/* Light mode colors. */
:root[data-theme="light"] {
	--sl-color-accent-low: #f5cf8f;
	--sl-color-accent: #eb9f2e;
	--sl-color-accent-high: #4b3621;
	--sl-color-white: #001a2f;
	--sl-color-gray-1: #002946;
	--sl-color-gray-2: #003b62;
	--sl-color-gray-3: #0a5c93;
	--sl-color-gray-4: #4b91cc;
	--sl-color-gray-5: #a4c6e5;
	--sl-color-gray-6: #e0f0ff;
	--sl-color-gray-7: #eff7ff;
	--sl-color-black: #fffff0;
}

header {
	backdrop-filter: blur(8px);
	box-shadow:
		rgba(0, 0, 0, 0.2) 0px 11px 15px -7px,
		rgba(0, 0, 0, 0.14) 0px 24px 38px 3px,
		rgba(0, 0, 0, 0.12) 0px 9px 46px 8px;
}

h1 {
	font-weight: 400;
}

.header {
	background-color: transparent;
}

header * {
	/* Ensure navbar items are in front of boat animation but slightly transparent */
	z-index: 12;
}

